--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@
 </nav>
 <div class="container-fluid header">
   <div class="row headerRow">
-    <!--<div class="col-xs-4 col-xs-offset-1 col-sm-3 col-md-2 col-md-offset-3">
-      <img src="img/andrewCartoon.png" class="img-responsive img-circle" alt="Andrew's Photo">
-    </div>-->
-    <div class="col-xs-4 col-xs-offset-1 col-md-6 col-md-offset-0">
-      <!--<h1 class="text-uppercase text-center name">Andrew Conley</h1>-->
+    <div class="pull-left">
       <div class="social">
           <a class="twitter" href="http://twitter.com/ndrewconley" data-username="@ndrewconley">Twitter</a>
         <a class="linkedin" href="http://linkedin.com/in/andrewscottconley" data-username="andrewconley">LinkedIn</a>
@@ -90,7 +86,7 @@
   </div>
 </div>
 
-<<div id="bio" class="container-fluid journal">
+<div id="bio" class="container-fluid journal">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h2 class="text-center">Journal</h2>
