--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
 
 <div class="container-fluid footer">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-xs-5">
       <h6>Copyright &copy; 2015 Andrew Conley</h6>
     </div>
-    <div class="col-md-8 social">
+    <div class="col-md-8 col-xs-7 social">
       <a class="twitter" href="http://twitter.com/ndrewconley" data-username="@ndrewconley">Twitter</a>
       <a class="linkedin" href="http://linkedin.com/in/andrewscottconley" data-username="andrewconley">LinkedIn</a>
       <a class="github" href="http://github.com/aconman1287">Github</a>
