Added blog post #2 and worked on sticky footer
Not sure how this will turn out :)

--- a/index.html
+++ b/index.html
@@ -78,17 +78,42 @@
   </div>
 </div>
 
-<div id="bio" class="container-fluid journal">
+<div id="journal" class="container-fluid journal">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h2 class="text-center">Journal</h2>
+      <h2 class="text-center">Journal #2</h2>
       <h6 class="text-left">Author</h6>
       <h6 class="text-right">Date</h6>
-      <p>I currently work on various web design, marketing, and writing projects. Previously, I was at townsquare and am still involved with <a href="http://100state.com">100state</a>. I also am writing at <a href="http://jonkmusic.com">Jonk Music</a> and traveling with <a href="http://remoteyear.com">Remote Year</a>.</p>
-
-      You can follow my travels <a href="http://andrewscottconley.com">here</a>. :)
+      <p>I currently work on various web design, marketing, and writing projects. Previously, I was at townsquare and am still involved with 100state. I also am writing at <a href="http://jonkmusic.com">Jonk Music</a> and traveling with Remote Year</a>.</p>
     </div>
   </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Teaching Our Host English</h2>
+      <h6 class="text-right">12.17.15</h6>
+      <p>Today, Nguyen was trying to find the right English word to use when talking about something with AirBnB and PayPal. The word she was searching for was ‘discover’, but we did not know that. She was talking about ‘check out’ in terms of getting money out of PayPal…or so I thought.
+
+      </br>Nguyen: What is a word for ‘check out’? (in broken English)
+      </br>
+      </br>Tom and I: (long pause)
+      </br>
+      </br>Nguyen: (says something sounding like) Explore, Expore, Expar….
+      </br>
+      </br>Tom and I: (long pause)
+      </br>
+      </br>Then literally at the same time…
+      </br>
+      </br>Tom: Extract!
+      </br>
+      </br>Andrew: Export!
+      </br>
+      </br>Nope, she was looking for discover. </p>
+    </div>
+  </div>
+  
 </div>
 
 
