Add all Journal Entries
*Added Journal Entries
*Add images to img file
*Delete unneccessary html, css, img
*added jQuery (for Mandrill API - not set up yet)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       ga('send', 'pageview');
     </script>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -81,19 +83,8 @@
 <div id="journal" class="container-fluid journal">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h2 class="text-center">Journal #2</h2>
-      <h6 class="text-left">Author</h6>
-      <h6 class="text-right">Date</h6>
-      <p>I currently work on various web design, marketing, and writing projects. Previously, I was at townsquare and am still involved with 100state. I also am writing at <a href="http://jonkmusic.com">Jonk Music</a> and traveling with Remote Year</a>.</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <h2 class="text-center">Teaching Our Host English</h2>
-      <h6 class="text-right">12.17.15</h6>
+      <h2 class="text-center">Teaching our host English</h2>
+      <h6 class="date text-right">12.17.15</h6>
       <p>Today, Nguyen was trying to find the right English word to use when talking about something with AirBnB and PayPal. The word she was searching for was ‘discover’, but we did not know that. She was talking about ‘check out’ in terms of getting money out of PayPal…or so I thought.
 
       </br>Nguyen: What is a word for ‘check out’? (in broken English)
@@ -113,75 +104,192 @@
       </br>Nope, she was looking for discover. </p>
     </div>
   </div>
-  
-</div>
 
+  <hr>
 
-<!--
-<div class="container-fluid experience">
-  <h1 class="text-uppercase text-center"><em><strong>Experience</em></strong></h1>
   <div class="row">
-    <div class="col-md-12">
-      <ul class="experienceInfo">
-      </ul>
-    </div>
-  </div>
-</div>
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Teaching our host English</h2>
+      <h6 class="date text-right">12.17.15</h6>
+      Today, again I learned some amazing things in Ho Chi Minh. I had lunch with my host, Nguyen, and my roommate Tom, and amazing conversations ensued.</br>
 
-<div class="container-fluid projects">
-  <h1 class="text-uppercase text-center"><em><strong>Projects</em></strong><h1>
-    <ul class="projectsInfo">
-    </ul>
-</div>
--->
+      Background:</br>
 
-<!--<div id="call" class="container-fluid call">
-  <div class="row">
-    <h2 class="text-center">Check out my <u><a class="btn btn-success" href="http://nomadiccodeschool.com">latest project</a></u> or submit a request <u><a class="btn btn-success" href="https://andrewscottconley.typeform.com/to/I1fLLZ">here.</a></u>
-  </div>
-</div>
+      <em>Tom - from Asturias, Spain but was living in London before heading to Kuala Lumpur 6 months ago and working as a paid volunteer for a camp outside of the city</em></br>
 
-<hr>-->
+      <em>Nguyen - lovely host from Ho Chi Minh who runs her own fast food / supermarket style place (well helps her cousins, who she sold it to, run it) and hosts so many people in her home</em></br>
 
-<!--<div id="portfolio" class="container-fluid portfolio">
-  <h2 class="text-center"><strong>Web Designs</strong></h2>
-    <div class="row portfolioImages">
+      We chatted about the prospect of living in the US. What Nguyen thought:</br>
 
-    </div>
-</div>
-
-<hr>-->
-
-<!--<div id="bio" class="container-fluid bio">
-  <div class="row">
-    <div class="col-md-4 col-md-offset-1">
-      <h2 class="text-center">Bio</h2>
-      <p>I currently work on various web design, marketing, and writing projects. Previously, I was at townsquare and am still involved with <a href="http://100state.com">100state</a>. I also am writing at <a href="http://jonkmusic.com">Jonk Music</a> and traveling with <a href="http://remoteyear.com">Remote Year</a>.</p>
-
-      You can follow my travels <a href="http://andrewscottconley.com">here</a>. :)
-    </div>
-    <div class="col-md-4 col-md-offset-1">
-      <h2 class="text-center">Ethos</h2>
       <ul>
-        <li>Good design is as little design as possible.</li>
-        <li>Creativity and inspiration come by working hard.</li>
-        <li>Any product that needs a manual to work is broken.</li>
-        <li>Everyone creates culture.</li>
-        <li>Persistence trumps talent.</li>
+        <li>Education is better. Education through high school is completely free.</li>
+        <li>To get into National Vietnamese University, have to be 1 out of 1000.</li>
+        <li>If you don’t get into National, you can go to private, but it’s more expensive (compare about 8million dong to 20million dong)</li>
+        <li>When you graduate from private, its very hard to get a job.</li>
+        <li>Nguyen worked hard when studying but didn’t get a government job. Her friend, who did not study hard, her father was in the government, and now she has a cozy government job and is rich.</li>
+        <li>In the US, its a lot easier to afford to have a car.</li>
+        <li>You can get healthcare much easier. Even if you don’t have insurance, the doctors will treat you.</li>
+        <li>If your flight is delayed, Americans will get a hotel to stay the night. Not so if you’re from a different country.</li>
       </ul>
     </div>
   </div>
-</div>-->
 
-<!--<div id="contact" class="container-fluid contact">
+  <hr>
+
   <div class="row">
-    <div class="col-xs-12 col-md-6 jumbotron">
-      <h2>Get in touch.</h2>
-      <p>I'm always looking for new projects and new people I can collaborate with. If you need help with a website or have marketing or design questions in general, get ahold of me.</p>
-      <p><a class="btn btn-primary btn-lg send" href="mailto:andrewscottconley@gmail.com" role="button"><span class="glyphicon glyphicon-send" aria-hidden="true"></span>  Email me</a></p>
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">To my phone, All my Love (pt. 2) [or 12 Gather in Mobile Store because of Foreigner]</h2>
+      <h6 class="date text-right">12.06.15</h6>
+      In my last post, I confessed my love (read: addiction) to my mobile phone. That was simply a super long preamble to a hilarious story about me trying to recharge my SIM card in Vietnam. Said story ensues:
+      <blockquote>
+        Did I accomplish my mission? Yes.</br></br>
+
+        Did it take an entire afternoon spent at a Viettel (mobile carrier) store? Yes.</br></br>
+
+        Were 12 bystanders and staff involved in the incident? Yes.</br></br>
+
+        Was Bill Murray present during all of this? No.</br></br>
+    </blockquote>
+    I had to get some more data for my new iphone6, now named Tobias (cuz he's a never-nude). I'd already ripped through my initial 3GB of data in Vietnam and without wifi at my abode, I needed at least 12GB more to use my phone as a hotspot for late night nothings online.
+    <h6>The journey begins</h6></br>
+    I have the ability to simply recharge my current SIM card, so that's my go-to move. Ought to be easy enough, right? Well, I ask my host, Nguyen (who I adore), where the nearest mobile shop is. She points about three houses down from us but quickly points out that he doesn't speak English. Hmm...I think. I want to make sure I'm getting the right thing, and between Nguyen's partial English and this guy's zero English, I'm already worried. But...she insists...so I head down there ready to make sure this works before I walk away. Then what happens? I walk away a bit disappointed. While it seems to work...I believe the carrier was still throttling my usage. Grrrr!!!</br>
+    <h6>Plan B.</h6></br>
+    Time for a taxi to my current carrier's shop. Taxi secured. 20 minutes later through Ho Chi Minh traffic, I arrive. Boom. There it is. In all its glory. And its still being constructed. I walk down the street to a Mobiphone shop (another provider). I sit down with the man inside who looks utterly irritated that he has to deal with someone who speaks 0 Vietnamese. <em>I don't blame him at all - I would be equally as impatient. </em>Needless to say, we don't get very far. <em>Apparently, this guy doesn't work on commission. </em>I leave.</br>
+    <h6>Plan C.</h6></br>
+    "Screw it!" I say to myself. I decide to head back toward the large Viettel (yet another provider's) store closer to my home. Back to the taxi that takes me back toward my home!
+    </br></br>
+    Ok. I've landed. I walk into this large turquoise and yellow store littered with motorbikes blocking the entrance, thinking to myself, "Surely someone speaks perfect English in this modern-looking establishment." <em>Yeah yeah yeah - you entitled wanker! I don't feel like anyone in Vietnam needs to know English...but since many do, I'm conditioned to having such an expectation. Back to the matter at hand, please...</em>
+    </br></br>
+    I'm immediately greeted by two very friendly, smiling female staff who speak a little English. I indicated that I'm looking for a new SIM card, so they walk me over to another employee and have me sit down. They show me a few options, and through the use of Google Translate, we begin to make some progress on understanding what I might be able to purchase.</br>
+    <h6>Now for the stir.</h6></br>
+    From here on out, the story becomes hazy, so I'll describe it in stream of consciousness...how it happened to me.</br>
+    </br></br>
+    turn left to someone leaning in asking me if we can connect on. head goes to the right back to the staff across the counter. facebook and skype so she can practice her english. tapped on the shoulder behind me. 120,000 dong for 12GB, sir. can I make. sorry I can't help you more. phone calls? smiles. two more staff show up behind me. I stand. I turn left and right. <em>are there really 12 people standing around me in this store as I am seemingly conducting some sort of 1-man show? o</em>ne lucky bystander: what's the problem sir. oh, you speak English. Thank you! I messed up my order twice? 12 GB and calls? no. a<em> lot of indications that I may be able to get what I want. t</em>hat will be 400,000 dong. dong. dong. dong. my friend over here thinks you are cute. cam on. come on! Oh, it's for my phone. What is happening, miss? smiles.
+    </br></br>
+    Can We JuSt StArT OvEr? howmanytimesareyougoingtoscanmypassport?! #gigsandgiggles I think I spun around one too many times. what time is it will i get any work done today did I miss lunch with Nguyen are these people laughing with me or at me do I smell will I ever get a SIM card?????? Don't worry Tobias. Don't worry.</br>
+    <h6>The show ends.</h6></br>
+    I got my SIM card. I made two friends who I can keep in contact with. Tobias is fulfilled. And hopefully, everyone got a kick out of that 2 hour experience.
     </div>
   </div>
-</div>-->
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">To my Phone, All my Love pt. 1</h2>
+      <h6 class="date text-right">11.28.15</h6>
+      A huge modern-day necessity when traveling and working: having access to data on your phone. It's amazing how much my phone usage has gone up since I left theDonaldland. You quickly realize that you rely on it for so many things you didn't think of before.</br></br>
+
+      Let me walk you through this quickly.</br></br>
+
+      As a late 20s-something, each afternoon / evening I say to myself, "Hey Andrew, what are you going to eat tonight?" "Well, that depends Andrew," I say to myself. "Are you attending any events tonight or are there any that are serving free food?" There's not, and I'm glad, as I could use a night to chillax (chilling and relaxing at the same time - similar to a double rainbow but more meaningful - more on that in a separate post). So instead I ask myself, "Do we have anything in the fridge?" Yes, but I'm not sure what. I decide instead to head to Cooper's Tavern on the square to meet a friend for dinner after work and before heading back to my place.</br></br>
+
+      This story seems simple enough, but now let's add in one new bit: I'm traveling in a foreign country by myself.</br></br>
+
+      As a late 20s-something, each afternoon / evening I say to myself, "Hey Andrew, what are you going to eat tonight?" "Well, that depends Andrew," I say to myself. "Can I cook food in my place and do I have food there to cook?" No - I can't, and there's not.If I could and there were, I would have previously had to have gone grocery shopping at a market that I look up on my phone, decide is legitimate, and then navigate toward it. Since that isn't what happened and because I want to see the city more, I decide that I'll go out for dinner this evening. I ask myself, "Where should I go out to eat?" This requires me taking out my phone, searching for places for good reviews on Foursquare, finding it in Google Maps for directions (being sure to use Google Maps; not Apple), then soliciting a ride there via either GrabTaxi or Uber.</br></br>
+
+      Notice the difference? Of course you do. My phone is like a great friend:</br></br>
+      <blockquote>
+        O sweet mobile of mine!</br>
+        Oh, how you answer all my questions.</br>
+        My fears recoil at a glance of your strength.</br>
+        You are my mighty sword which I wield from in my front pocket.</br>
+        You know my name and treat me with utter respect!</br>
+        I use you constantly and let you die repeatedly without thought of what I could be doing for you.</br>
+        What do you want?</br>
+        What are your dreams?</br>
+        When will your voice ring in my ear, loyal friend?</br>
+        'Tis thee that hath empowered me so.</br>
+        'Tis thee that hath liberated my soul.</br>
+        As your battery life dwindles this evening before I plug you in to awaken,</br>
+        Goodnight sweet prince.</br>
+      </blockquote>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Sweet Home Georgetown (Penang</h2>
+      <h6 class="date text-right">07.10.15</h6>
+      <iframe class ="vid" width="600" height="375" src="https://www.youtube.com/embed/hQv-zeojzbU" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div> 
+
+<hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Let's build something</h2>
+      <h6 class="date text-right">09.15.15</h6>
+      Remote Year 1 is a bright squad, and a lot of them are working on some very cool projects. There wasn’t, however, a public forum for people to share ideas and collaborate. I wanted to change, so I created a couple meetups for our RY group:
+      <div>
+        <h6>1. The RY Entrepreneurship Meetup</h6>
+      </div>
+      <div>
+        This group is intended to give support to RY entrepreneurs working on new endeavors. While people have great ideas, some people could use some help with how to get started. Others simply want a forum for getting feedback from the rest of the group since we have 75 people ready and able to give some valuable insight.
+      </div>
+      <div>
+        <img src="img/ryEntrepreneurship.jpg" width="100%">
+        <p class="caption">Taking a selfie while the groups all get to work on their business model canvases.</p>
+      </div>
+      <div>
+        To kick things off, I led two separate workshops about the Lean Startup methodology and the Business Model Canvas. These are two different tools I use frequently with new projects and companies.
+      </div>
+      <div>
+        <h6>2. Ideascape: Biweekly brainstorms</h6>
+      </div>
+      <div>
+        The other meetup we put together was a group sharing ideas they have that they haven’t really started working on yet. It’s a brainstorm over coffee (to get the ideas flowing) around ideas that have yet to be fully fleshed out.
+      </div>
+      <div>
+        <img src="img/ideascape.jpg" width="100%">
+        <p class="caption">The first RY brainstorm happening. Ideas, Ideas, Ideas...</p>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">What I've been up to so far</h2>
+      <h6 class="date text-right">08.24.15</h6>
+      <p>I got this whole blog thing started pretty late - but I’m here, and it’s happening. I’ve officially been on the road now for 49 days (since July 4). I’ve been through quite a few cities since then:
+      </br></br>
+      <blockquote>
+        Madison - Chicago - Dublin - Milan - Venice - Villach - Ljubljana - Stahovica - Zagreb - Plitvice - Matavun - Luce - Lake Bled - Rijeka - Cavtat - Dubrovnik - Kotor - Tivat - Hvar.
+      </blockquote>
+      </br></br>
+      Though it feels like I’ve barely been in Cavtat, we will be heading to Istanbul next Sunday - away from the Dalmatian Coast paradise and onward to where East meets West in one of the 5 biggest cities in the world.
+      </br></br>
+      It seems like I’ve barely been here, but it also feels like I’ve been here forever. The hardest thing to learn on this trip seems to be how to slow down, say no to things, and just live and breathe. Things are moving so fast, and with so much going on, you become a bit like a kid in a candy store running around trying to grab at everything before its time to leave.
+      </br></br>
+      I’m excited to relax a bit more and sink into a better routine. It seems that the entire group has that same sentiment. The honeymoon period is ending, and people seem ready to start pursuing their goals for this trip. Almost everyone intends to grow professionally while traveling, and with all the other excitement, its been hard to get started.</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Kamniško Sedlo Day Hike</h2>
+      <h6 class="date text-right">07.20.15</h6>
+      <iframe class="vid" width="600" height="375" src="https://www.youtube.com/embed/mC6nj_twtqA" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Escaping</h2>
+      <h6 class="date text-right">07.10.15</h6>
+      <iframe class ="vid" width="600" height="375" src="https://www.youtube.com/embed/BpdA4HgkdMA" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div> 
+</div>
 
 <div class="container-fluid footer">
   <div class="row">
