2 new blog posts and search button
*Messed with search to try to get a CTRL + F but made no progress
*Added 2 december blog posts

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default"><a href="#" onclick="find();">Submit</a></button>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -81,6 +81,81 @@
 </div>
 
 <div id="journal" class="container-fluid journal">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Teaching our host English</h2>
+      <h6 class="date text-right">12.17.15</h6>
+      <em>Coffee is for careful people.</em> But in Ho Chi Minh City, there appears to be a culturally different mindset about being careful. Note: this broad generalization is being cast on an entire city based on my experience with my kind host.</br>
+    </br>
+      How to be careful:</br>
+      <ul>
+        <li><strong>Don’t leave anything outside at night. </strong>Even, and maybe especially, a parked and locked motorbike. To Vietnamese, this is just an inherent part of life. </li>
+        <li><strong>Never set any valuable object down in public. </strong>Always keep it in your pocket or in your hand. And pocket trumps hand. Anything that is set down is up for grabs. Note: I have not had any problems here. I’ve gone to the restroom at cafes and left my laptop on the table without any fear.</li>
+      </ul>
+      Being careful doesn’t apply to:</br>
+      <ul>
+        <li><strong>Being fearless on a motorbike.</strong></li> Immediately after my host reprimanded me for setting my wallet on my bike seat for a half second at the gas station, she sped off into an intersection and across 4 lanes of traffic who were not stopping for her. She expected me to just follow with ease, too. Super careful.
+        <li><strong>Allowing strangers into your house.</strong></li> One morning when Nguyen was preparing a lunch for about 10 people, I was asked to go grab ‘her friend’. As I left, she mentioned she didn’t know what he looked like. I didn’t ask questions (as it was 9am on a Sunday and I was on little sleep) but just headed to get Ezekiel. I found out later that they had never met. Apparently, Nguyen frequents such forums as Couchsurfing and invites people over for meals.
+      </ul></br>
+      <h6>tl;dr :</h6> Personal safety is trumped by the fear of theft in Vietnam. 
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Losing my bike</h2>
+      <h6 class="date text-right">12.21.15</h6>
+       Not everyday is a good day while traveling. On a quiet, dreary Sunday in Saigon, I worked out and spent most of the day doing research writing and web design. In the evening, I went and finally picked up a motorbike. Really, I should have done this at the beginning of my stay here for 2 reasons:</br>
+
+      <ul>
+        <li>I love motorbikes. Love love love!</li>
+        <li>The price is the same between a week-long rental and month-long rental.</li>
+      </ul>
+      I head down to the only place I found to contact that had decent prices, VNN Travel, on Bo Vien street, where the backpacker party is. They quickly set me up, and I am off.</br>
+    </br>
+      I spend the evening catching up with a <a href=“http://remoteyear.com”>Remote Year</a> friend before calling it a night and heading back. I return sometime between midnight and 1 am. I lock my bike outside our front door and head for bed.</br>
+    </br>
+      When I awake (early I might add), I head downstairs. As I’m pouring a glass of water, I look out front and don’t see my bike. I assume someone moved it this way or that to get around it (though I’m not sure that would be easy with it locked). As I scour my quaint Vietnamese neighborhood, I see no signs of it. Then, a neighborhood mother that runs the shop in the square approaches me telling me something. I have no idea what she is trying to communicate, but she is pointing north into the distance. While I don’t comprehend anything from this interaction, I do infer that she knows something about my bike, and I assume that’s a good sign.</br>
+    </br>
+      In my frantic 7am haze, I decide to walk around the block briefly to just check around and figure out what I should do. When I return, I decide to call Nguyen (my host) to consult her. When she hears what happens, she freaks out and heads my way. When she arrives, she hears my story, assesses the situation, talks to neighbors, and we conclude that the bike is stolen. </br>
+    </br>
+      What that means for me is $2000 to the rental company to replace it. Well, they say the bike is worth $2000, but it is not. I could buy a comparable bike for $300 - $400. </br>
+    </br>
+      Nguyen wants to call the police. I tell her to hold on a minute first and ask her to speak with the mother who had tried to tell me something earlier. They talk, and Nguyen comes back inside. What she learned was that the Vietnamese police officer who does a sweep of the neighborhood every night took my bike. Apparently after I went to bed, he showed up at our place and rang the doorbell to alert me to bring the bike inside. I did not hear it. The lady said that 5 policemen show up and are ringing the doorbell for about two hours! When I don’t come down, they take the bike to the police station. The lady who knew all of this was up around this time and told the cops that two foreigners were staying at the place. <em>Great…</em></br></br>
+    </br>
+      Nguyen and I start to formulate a plan. She is worried about a few things:</br>
+      <ol>
+        <li>The police now know that foreigners are staying here, and we are supposed to be registered so they know. This could mean a fine or worse.</li>
+        <li>Nguyen’s house is not registered to be able to host as a business, so if they don’t believe that we are just friends, she could face fines.</li>
+        <li>The house does not have a ’temporary registration’ since Nguyen technically lives down the street with her mother and daughter. If she wants to avoid the penalties for #1 and #2, she would need to temporary register this place as her home and pay back taxes on it. And possibly a fine.</li>
+        <li>I will have to pay a fine for being out past curfew. In these backstreet Vietnamese neighborhoods, there is a curfew to prevent people from disturbing neighbors at all hours. It does not seem to be enforced much, but if you’re caught doing something else, they can fine you for this.</li>
+        <li>I will have to pay a fine for parking my bike outside. This is simply not what you’re supposed to do. <strong>Everything</strong> goes inside at night.</li>
+      </ol>
+      I’m worried that this may cost <strong>a lot</strong> of money and result in Nguyen being in bad standing with the police. She decides to head to the police station to see what she can do, but she returns shortly because the police are in their weekly Monday morning meeting. She calls the police guard who protects the neighborhood, and he agrees to meet at a coffee shop.</br>
+    </br>
+      Nguyen, the saint that she is, cancels a couple of meetings for the day and heads to negotiate with the police officer. The long and short of it is that the police officer asks for 500,000 dong (~$20). He tells her to meet him at the police station at 2pm with the vehicle registration card, and he’ll see what he can do.</br>
+    </br>
+      She returns, explains the situation, and now we need to obtain the vehicle registration card. We call the shop I rented from. We have a problem. The rental shop owner bought the bike under the table to avoid taxes on the transaction. That means the vehicle registration card was not in his name but the previous owner’s name. So now if we need the person whose name is on the registration card to get the bike out, we may need to involve yet another person and potentially open them up to fines and back taxes because of their transaction. <strong>Oh my freaking gosh. I’ve opened up pandora’s box of fines and taxes for simply parking outside and not knowing there was a rule against it.</strong></br>
+    </br>
+      Ok. Ok. We get the vehicle registration and wait for 2pm. As the time approaches, Nguyen comes up with a brilliant idea to take two bottles of sake of mine (that were free from a restaurant a week before) to bring to the police chief as a gift to smooth things over. She tells me to wait again because if they know I’m a foreigner from the US, they may ask for more money (since they assume I have plenty). </br>
+    </br>
+      She leaves.</br>
+    </br>
+      Within 15 minutes, she calls.</br>
+    </br>
+      “Have Tom bring you here to pick up the bike.”</br>
+    </br>
+      YES. We head down to the station, grab the bike, and take off as a family of three on our motorbikes. All our worries had been avoided.</br>
+    </br>
+      <h6>tl;dr:</h6> With a $20 and two bottle of sake bribe, I was able to recover my bike from the Vietnamese police.
+
+    </div>
+  </div>
+
+  <hr>
+
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h2 class="text-center">Teaching our host English</h2>
