Added photo and blog post

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <div id="journal" class="container-fluid journal">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h2 class="text-center">Teaching our host English</h2>
-      <h6 class="date text-right">12.17.15</h6>
+      <h2 class="text-center">Saigon: <strong>A</strong>lways <strong>B</strong>e <strong>C</strong>areful</h2>
+      <h6 class="date text-right">12.22.15</h6>
       <em>Coffee is for careful people.</em> But in Ho Chi Minh City, there appears to be a culturally different mindset about being careful. Note: this broad generalization is being cast on an entire city based on my experience with my kind host.</br>
     </br>
       How to be careful:</br>
@@ -148,6 +148,7 @@
       “Have Tom bring you here to pick up the bike.”</br>
     </br>
       YES. We head down to the station, grab the bike, and take off as a family of three on our motorbikes. All our worries had been avoided.</br>
+      <img src="img/sake.jpg" width="100%">
     </br>
       <h6>tl;dr:</h6> With a $20 and two bottle of sake bribe, I was able to recover my bike from the Vietnamese police.
 
@@ -184,7 +185,7 @@
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h2 class="text-center">Teaching our host English</h2>
+      <h2 class="text-center">The land of opportunity</h2>
       <h6 class="date text-right">12.17.15</h6>
       Today, again I learned some amazing things in Ho Chi Minh. I had lunch with my host, Nguyen, and my roommate Tom, and amazing conversations ensued.</br>
 
