--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h2 class="text-center">Teaching our host English</h2>
-      <h6 class="date text-right">12.17.15</h6>
+      <h6 class="date text-right">12.19.15</h6>
       <p>Today, Nguyen was trying to find the right English word to use when talking about something with AirBnB and PayPal. The word she was searching for was ‘discover’, but we did not know that. She was talking about ‘check out’ in terms of getting money out of PayPal…or so I thought.
 
       </br>Nguyen: What is a word for ‘check out’? (in broken English)
@@ -178,6 +178,17 @@
       </br>Andrew: Export!
       </br>
       </br>Nope, she was looking for discover. </p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Jonk: Christine and the Queens</h2>
+      <h6 class="date text-right">12.17.15</h6>
+      <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/227342411&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+      Christine (real name Héloïse Letissier) and the Queens (her drag queen backing band) are a French band that have made a stand in indie freak pop. Héloïse, who now regularly goes by Christine, began this project back in 2010 when she found comfort...<a href="http://jonkmusic.com" class="readMore text-center">[more at JONKmusic]</a>
     </div>
   </div>
 
