Added Arca music article

--- a/index.html
+++ b/index.html
@@ -298,8 +298,19 @@
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
+      <h2 class="text-center">Jonk: Arca</h2>
+      <h6 class="date text-right">11.17.15</h6>
+      <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226041977&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+      In anticipation of his upcoming album, Mutant, Arca released the album’s second single, “Soichiro,” which holds true to his trip-hop form. It’s titled after the middle name of...<a href="http://jonkmusic.com" class="readMore text-center">[more at JONKmusic]</a>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
       <h2 class="text-center">Sweet Home Georgetown (Penang</h2>
-      <h6 class="date text-right">07.10.15</h6>
+      <h6 class="date text-right">10.05.15</h6>
       <iframe class ="vid" width="600" height="375" src="https://www.youtube.com/embed/hQv-zeojzbU" frameborder="0" allowfullscreen></iframe>
     </div>
   </div> 
